Fix sidepanel on mobile

--- a/src/WebClientApp/src/components/SidePanel/SidePanel.module.scss
+++ b/src/WebClientApp/src/components/SidePanel/SidePanel.module.scss
@@ -57,7 +57,7 @@
 @media (max-width: v.$mobile-width) {
   .container {
     --side-panel-padding-x: 24px;
-    height: min(100%, calc(100dvh - var(--reader-header-offset)));
+    height: unset;
     position: absolute;
     left: 0;
     bottom: 0;
